k8s/clusters/homelab-prod/infrastructure/cilium/cilium-hubble-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Cilium Hubble
    gethomepage.dev/description: Observability for Cilium, a high-performance Container Network Interface (CNI).
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: cilium
    gethomepage.dev/app: hubble-ui
    gethomepage.dev/pod-selector: app.kubernetes.io/name=hubble-ui
spec:
  ingressClassName: ${ingress_class_name:=}
  rules:
  - host: hubble-ui.${cluster_domain}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
